--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -1,2 +1,2 @@
 github: [LocutusV0nB0rg]
-custom: ["https://www.paypal.me/LocutusVonBorg", PayPal]
+custom: ["https://www.paypal.me/LocutusVonBorg"]
